[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/UI/bg.png" type="Texture" id=1]
[ext_resource path="res://scripts/visual.gd" type="Script" id=2]

[node name="visual" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -368, -116 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 136.0
margin_top = 95.0
margin_right = 343.0
margin_bottom = 175.0
custom_constants/separation = 16

[node name="bloom" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 207.0
margin_bottom = 16.0
custom_constants/separation = 16

[node name="bloom" type="Label" parent="CenterContainer/VBoxContainer/bloom"]
margin_top = 1.0
margin_right = 41.0
margin_bottom = 15.0
text = "bloom"

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/bloom"]
margin_left = 57.0
margin_top = 1.0
margin_right = 65.0
margin_bottom = 15.0
text = "1"

[node name="bloom_slider" type="HSlider" parent="CenterContainer/VBoxContainer/bloom"]
margin_left = 81.0
margin_right = 181.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 16 )
min_value = 1.0
max_value = 10.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="brightness" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 207.0
margin_bottom = 48.0
custom_constants/separation = 16

[node name="brightness" type="Label" parent="CenterContainer/VBoxContainer/brightness"]
margin_top = 1.0
margin_right = 67.0
margin_bottom = 15.0
text = "brightness"

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/brightness"]
margin_left = 83.0
margin_top = 1.0
margin_right = 91.0
margin_bottom = 15.0
text = "1"

[node name="brightness_slider" type="HSlider" parent="CenterContainer/VBoxContainer/brightness"]
margin_left = 107.0
margin_right = 207.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 16 )
min_value = 1.0
max_value = 3.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="saturation" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 207.0
margin_bottom = 80.0
custom_constants/separation = 16

[node name="saturation" type="Label" parent="CenterContainer/VBoxContainer/saturation"]
margin_top = 1.0
margin_right = 64.0
margin_bottom = 15.0
text = "saturation"

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/saturation"]
margin_left = 80.0
margin_top = 1.0
margin_right = 88.0
margin_bottom = 15.0
text = "1"

[node name="saturation_slider" type="HSlider" parent="CenterContainer/VBoxContainer/saturation"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 16 )
min_value = 1.0
max_value = 3.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -6.0
margin_top = -70.0
margin_right = 35.0
margin_bottom = -50.0
text = "back"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="CenterContainer/VBoxContainer/bloom/bloom_slider" to="." method="_on_bloom_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/brightness/brightness_slider" to="." method="_on_brightness_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/saturation/saturation_slider" to="." method="_on_saturation_slider_value_changed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
